v4l-utils-0.8.7
---------------
* Utils changes (0.9.x backports)
  * ir-keytable: Fixed file parsing errors
  * qv4l2: fix segfault when there are no inputs or outputs
  * dvb: Merged DVB tools from development branch
* libv4l changes (0.9.x backports)
  * Add some more laptop models to the upside down devices table

v4l-utils-0.8.6
---------------
* libv4l changes (0.9.x backports)
  * Add support for libjpeg >= v7
  * Add new matching algorithm for upside down table (gjasny)
  * Add some more laptop models to the upside down devices table (hdegoede, gjasny)
  * Retry with another frame on JPEG header decode errors (hdegoede)
  * Improved JL2005BCD support (Theodore Kilgore, hdegoede)
  * Set errno to EIO if getting 4 consecutive EAGAIN convert errors (hdegoede)
  * Make software autowhitebalance converge faster (hdegoede)
  * Add quirk support for forced tinyjpeg fallback (hdegoede)

v4l-utils-0.8.5
---------------
* Utils changes
  * parse_em28xx_drxk.pl: New parser for dumps of em28xx with drxk frontend
    (mchehab)
  * qv4l2: Add support for bitmap controls (hverkuil)
  * v4l2-ctl: add support for the new bitmask control type (hverkuil)
  * v4l2-ctl: add support for the control event (hverkuil)
  * v4l2-ctl: small bugfixes (hverkuil)
  * v4l2-compliance: various new tests (hverkuil)
  * lib_media_dev: various fixes / cleanups (hdegoede)
* libv4l changes
  * Add some more laptop models to the upside down devices table (hdegoede)
  * Add support for SE401 pixelformat (hdegoede)
  * Software autogain tweaks (hdegoede)

v4l-utils-0.8.4
---------------
* Utils changes
  * Various small fixes (hverkuil, mchehab)
  * qv4l2: Add support for configuring the framerate for devices which support
    this like uvc cams (hdegoede)
  * parse_tcpdump_log.pl: new parser for tcpdump / wireshark made usbmon
    dumps (mchehab)
  * New lib_media_dev lib, to pair audio devices with video devices
    (and other combinations) for now this lives in utils and does not get